# QSVD

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
fake_quant/: README.md  act_aware_utils.py  beta_utils.py  calibrate_model.py  data_utils.py  eval_llavanext_vizwiz.py  eval_smolvlm_vizwiz.py  eval_utilsdistllava.py  eval_utilsdistseed.py  eval_utilsdistvizwiz.py  fisher_info_utils.py  gptq_utils.py  grad_info_utils.py  hadamard_utils.py  main.py  main_quarot.py  mainllava.py  mainllavanext.py  mainsmovlm.py  model_utils.py  profile_utils.py  quant_utils.py  rotation_utils.py  svd_utils.py  utils.py
myllava/: .gitignore  pyproject.toml
myllava/llava/: __init__.py
myllava/llava/eval/: eval_science_qa.py  eval_science_qa_llama.py  model_vqa_science.py  model_vqa_science_custom.py  model_vqa_science_llama.py
myllava/llava/model/: __init__.py  builder.py
myllava/playground/: submit_example.sbatch  submit_llama_sqa.sbatch
myllava/playground/data/: llava_forward.py  plot_in_vlm.py  sqa.sh  sqa_convert.sh  sqa_llama.sh  sqa_llava.sh  sqa_results.sh
myllava/playground/data/eval/: scienceqa
myllava/scripts/: convert_sqa_to_llava.py
myllava/scripts/v1_5/eval/: sqa.sh
scripts/: run_llava.sh  run_llavanext.sh  run_smolvlm.sh
